# tests_hw14

./: .example.env  README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 007893d275e2_add_users.py  094a13e49502_add_to_birthday_default.py  2a369a3acbc9_upgrade_models.py  2aa6504fddba_upgrade_id.py  5fe9ea1a024a_maybe.py  df630fbfd488_delete_in_birthday_default.py  efd271de00f8_init.py  f67cad4b3837_add_confirm_email.py
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html  reset_password.html
tests/: conftest.py  test_repository_auth.py  test_repository_contacts.py  test_repository_users.py  test_route_auth.py  test_route_contacts.py
