[tool.poetry]
name = "homework-14"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
fastapi = "^0.108.0"
psycopg2 = "^2.9.9"
pydantic = "^2.5.3"
alembic = "^1.13.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.25.0"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.3"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.38.0"
jose = "^1.0.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.4"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
